--- a/users/templates/index.html
+++ b/users/templates/index.html
@@ -116,7 +116,8 @@
         <h3><button id="reset-button">Reset Board</button></h3>
         <form method="POST" id = "chess-form">
             {% csrf_token %}
-            <button type="button" id="ajaxButton">Alpha Beta ☘</button>
+            <button type="button" id="ajaxButton">Alpha Beta 🤖</button>
+            <button type="button" id="ajaxButton2">MCTS 👹</button>
         </form>
         
     </div>
