--- a/users/templates/index.html
+++ b/users/templates/index.html
@@ -118,6 +118,7 @@
             {% csrf_token %}
             <button type="button" id="ajaxButton">Alpha Beta 🤖</button>
             <button type="button" id="ajaxButton2">MCTS 👹</button>
+            <button type="button" id="ajaxButton3">Máy vs Máy 🐼</button>
         </form>
         
     </div>
